syntax = "proto3";

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service Greeter {
    rpc SayList (HelloRequest) returns (stream HelloReply);
}
